--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -13,7 +13,7 @@
   }
 
   &__image-box {
-    position: relative; 
+    position: relative;
     left: -4rem;
   }
 
@@ -38,6 +38,10 @@
   &__image-box {
     margin-top: 7rem;
   }
+
+  &__image {
+    width: 90%;
+  }
 }
 
 // Feature 3
@@ -52,7 +56,7 @@
 
   &__box {
     width: 33%;
-    padding: 3rem 2rem;
+    padding: 0 2rem;
   }
 }
 
@@ -62,14 +66,27 @@
 
   &__clients {
     display: flex;
-    justify-content: space-between;
-    padding: 0 2.5rem;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 2rem;
+  }
+
+  &__client-box {
+    padding: 3rem 2rem;
   }
 }
 
 // Download Section
 .download-section {
   padding: 6rem 0 12rem 0;
+
+  &__buttons {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 
